# xyz-kit

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build-macos.yml  deploy-docs.yml  main.yml  release.yml
docs-site/: hugo.toml  index.md  package-lock.json  package.json
docs-site/.vitepress/: config.mts
docs-site/.vitepress/theme/: style.css
docs-site/assets/: _custom.scss
docs-site/components/: index.md
docs-site/concepts/: index.md
docs-site/content/: _index.md
docs-site/content/docs/: _index.md
docs-site/content/docs/development/: _index.md
docs-site/content/docs/faq/: _index.md
docs-site/content/docs/installation/: _index.md
docs-site/content/docs/quick-start/: _index.md
docs-site/content/quick-start/: _index.md
docs-site/guide/: development.md  faq.md  index.md  quick-start.md
docs/wiki/: Development-Setup.md  Home.md  Installation.md
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  processor.rs  search.rs  shortcut.rs  store.rs  tray.rs
src/api/: tauri.js
src/components/: EnterButton.jsx  FunctionBar.jsx  FunctionIcon.jsx  SearchDialog.jsx
src/constants/: index.js
src/store/: useAppStore.js
src/utils/: index.js
