[package]
name = "xyz-kit"
version = "1.0.0"
edition = "2021"

[lib]
name = "str_toolkit_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
dirs = "5"

[dev-dependencies]
proptest = "1.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
